--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="x-UA-Compatible" content="IE=Edge">
         <meta name="robots" content="noindex" />
-        <title>Decap CMS</title>
+        <title>Content Manager</title>
         <!-- <link rel="icon" type="image/svg+xml" sizes="180x180" href="favicon.svg"> -->
         <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
         <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
