--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -6,7 +6,10 @@
         <meta http-equiv="x-UA-Compatible" content="IE=Edge">
         <meta name="robots" content="noindex" />
         <title>Content Manager</title>
-        <!-- <link rel="icon" type="image/svg+xml" sizes="180x180" href="favicon.svg"> -->
+        <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
         <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
     </head>
